# advent-of-code-2024

./: Cargo.toml  LICENSE
cross/: Cargo.toml
cross/.cargo/: config.toml
cross/src/: lib.rs  main.rs
data/day6/: example.txt
src/: day1a.rs  day1b.rs  day2a.rs  day2b.rs  day3a.rs  day3b.rs  day4a.rs  day4b.rs  day5a.rs  day5b.rs  day6a.rs  day6b.rs  day7a.rs  day7b.rs  lib.rs  util.rs
util-macros/: Cargo.toml
util-macros/src/: lib.rs
